@@ -9,7 +9,7 @@
       <script type="text/javascript" src="scripts/JSRootCore.js"></script>
    </head>
    <body onload="JSROOT.BuildSimpleGUI()">
-      <div id="simpleGUI" path="http://root.cern.ch/js/files/" files="ct.root;exclusion.root;fillrandom.root;glbox.root;graph.root;hsimple.root;legends.root;rf107.root;stacks.root;zdemo.root">
+      <div id="simpleGUI" path="https://root.cern.ch/js/files/" files="ct.root;exclusion.root;fillrandom.root;glbox.root;graph.root;hsimple.root;legends.root;rf107.root;stacks.root;zdemo.root">
          loading scripts ...
       </div>
    </body>
